Utilized DogAPI to fetch dog photos

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,8 @@
     <div class="form-group">
       <label>Melon Type
         <select id="melon-type-field" name="melon_type" class="form-control">
-          <option>Watermelon</option>
-          <option>Crenshaw</option>
+          <option value="Watermelon">Watermelon</option>
+          <option value = "Crenshaw">Crenshaw</option>
         </select>
 
       </label>
@@ -79,8 +79,9 @@
 
 
   <h2>Dogs (Further Study)</h2>
+  <button id="get-dog-image" class="btn btn-primary mt-2 mb-5">Get dog image</button>
+
   <div id="dog-image">
-      <button id="get-dog-image" class="btn btn-primary mt-2 mb-5">Get dog image</button>
   </div>
 
 </div>
